# markdown-publisher

./: .mypy.ini  README.md  pyproject.toml
.github/linters/: pyproject.toml
.github/workflows/: code-lint.yml  coverage.yml  tests.yml  unit-test.yml
src/: __init__.py  config_loaders.py  post_codecs.py  processors.py  utils.py
src/utils/: misc.py
tests/: conftest.py  test_config_loaders.py  test_post_codecs.py  test_processors.py  test_utils.py
tests/assets/configs/hugo/one_file_json/: config.json
tests/assets/configs/hugo/one_file_toml/: config.toml
tests/assets/configs/hugo/one_file_yml/: config.yml
tests/assets/configs/hugo/recursive/config/: config.toml
tests/assets/configs/hugo/recursive/config/foo/: config.toml
tests/assets/configs/hugo/recursive/config/foo/bar/: config.toml  object.name.toml
