[tool.poetry]
name = "post-publisher"
version = "0.1.0"
description = "A GitHub action to publish posts"
authors = ["Kevin Marilleau <kevin.marilleau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
