[tool.poetry]
name = "post-publisher"
version = "0.1.0"
description = "A GitHub action to publish posts"
authors = ["Kevin Marilleau <kevin.marilleau@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
path = "^15.0.0"
pyyaml = "^5.3.1"
toml = "^0.10.2"
python-frontmatter = "^0.5.0"
markdown = "^3.3.3"
pydantic = "^1.7.3"
markdownify = "^0.5.3"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
requests-cache = "^0.5.2"
mypy = "^0.790"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
testpaths = [
  "src",
  "tests",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
